  http://lists.beasts.org/pipermail/tpop3d-discuss/2001-November/000308.html
for more information, or if you want to use the old scheme regardless (not
recommended). In addition, tpop3d now marks messages in maildirs as `seen',
using the `:2,S' filename suffix, rather than just moving them to cur/.

Made logging of failed authentication attempts more informative, following a
suggestion by Jens Liebchen. Some minor bugs were fixed thanks to the efforts
of Chris Elsworth, Ben Schumacher and Odhiambo Washington.

1.3.5

A bug in the log printing code which caused trouble on some architectures was
fixed. A bug in the maildir code which caused the STAT command to claim that
the size of the mailbox was 0 was also fixed. The code was cleaned up slightly
in a comp.lang.c sense.

Authenticators are now passed the IP address of the connected client, which
makes writing POP-before-SMTP authenticators easier.

Facility for specifying the SQL queries used by auth-mysql at runtime was
added, thanks to Mike Bremford. In addition, it is now possible to specify the
types of mailboxes used by auth-mysql.

Support for TCP Wrappers was added.

tpop3d will now remove a stale PID file on startup, rather than exiting.

Support for the MySQL PASSWORD() function as a password-hashing method was
added.

A bug in the supplied TPOP3D::AuthDriver perl module was fixed, thanks to
Steve Benson.

A `StartupItem' (Mac OS X startup script) for tpop3d was contributed by
Gerben Wierda, along with notes on using tpop3d on Mac OS X.

1.3.4

Minor changes, and addition of metadata caching for BSD mailspools; in
addition, the mailbox object was modified for efficiency reasons.

Fixed a bug which could cause child processes to fail with SIGSEGV under heavy
load.

Added an auth-perl script for authentication against an Oracle database,
contributed by Paul Makepeace.

1.3.3

Fixes for a couple of portability bugs which crept in to 1.3.2.

1.3.2
